RESOLVED FIXED187662
WebKit sometimes holds WiFi/BT assertions while the Networking process is suspended
https://bugs.webkit.org/show_bug.cgi?id=187662
Summary WebKit sometimes holds WiFi/BT assertions while the Networking process is sus...
Tim Horton
Reported 2018-07-13 14:19:00 PDT
WebKit sometimes holds WiFi/BT assertions while the Networking process is suspended
Attachments
Patch (9.95 KB, patch)
2018-07-13 14:31 PDT, Tim Horton
cdumez: review+
Tim Horton
Comment 1 2018-07-13 14:31:36 PDT
Chris Dumez
Comment 2 2018-07-13 14:49:46 PDT
Comment on attachment 344982 [details] Patch r=me
Tim Horton
Comment 3 2018-07-13 15:36:08 PDT
Tim Horton
Comment 4 2018-07-13 15:42:23 PDT
Note You need to log in before you can comment on or make changes to this bug.