Source/WebKit/NetworkProcess/soup/NetworkProcessSoup.cpp
@@ -182,5 +182,14 @@ void NetworkProcess::platformProcessDidResume()
     notImplemented();
 }
 
+void NetworkProcess::platformProcessDidTransitionToForeground()
+{
+    notImplemented();
+}
+
+void NetworkProcess::platformProcessDidTransitionToBackground()
+{
+    notImplemented();
+}
 
 } // namespace WebKit
